--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
 <body>
     <header>
-        <h1>Welcome!</h1>
         <nav>
             <ul>
                 <li><a href="https://github.com/kc-claas?tab=repositories">Github</a></aGithub></li>
@@ -18,12 +17,13 @@
             </ul>
         </nav>
     </header>
+    <h1>Welcome!</h1>
     <figure>
         <img src="./assets/image-1.png" alt="Coming Soon">
         <figcaption>It's a work in progress!</figcaption>
     </figure>
     <section>
-    <h2>Contact me</h2>
+    <h2 id="contact">Contact me</h2>
         <form>
         <p>
             <label for="name">Name</label>
@@ -34,7 +34,7 @@
             <input type="email" name="email" required>
         </p>
         <p>
-            <input type="submit" value="submit">
+            <input type="submit" value="send">
         </p>
         </form>
     </section>
