--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             </ul>
         </nav>
     </header>
+
+    <main>
     <h1>Welcome!</h1>
     <figure>
         <img src="./assets/image-1.png" alt="Coming Soon">
@@ -38,6 +40,8 @@
         </p>
         </form>
     </section>
+    </main>
+
     <footer>
         <h3>Thanks for visiting!</h3>
         <p>&copy; 2024 kc-claas</p>
