margin and padding touchups

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
     <section>
     <h2 id="contact">Contact me</h2>
         <form>
-        <p>
+        <p class="text-input">
             <label for="name">Name</label>
             <input type="text" name="name" required>
         </p>
-        <p>
+        <p class="text-input">
             <label for="email">Email</label>
             <input type="email" name="email" required>
         </p>
         <p>
-            <input type="submit" value="send">
+            <input type="submit" value="send" class="submit-button">
         </p>
         </form>
     </section>
